<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar" tools:ignore="MissingTranslation"> avatar </string>
    <string name="description_post_menu" translatable="false">menu</string>
    <string name="description_post_like" translatable="false">likes</string>
    <string name="description_post_repost" translatable="false">repost</string>
    <string name="description_post_views" translatable="false">views</string>
    <string name="count_likes" translatable="false"> </string>
    <string name="count_reposts" translatable="false"> </string>
    <string name="count_views" translatable="false">13</string>
    xml
    <string name="hint">Text</string>
    <string name="error_empty_text">Text is blank</string>
    <string name="remove">remove</string>
    <string name="edit">edit</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="error_empty_content" translatable="false">Empty content</string>
    <string name="description_post_save" />
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="no_post">No post</string>
    <string name="network_error">Network Error</string>
    <string name="retry">Retry</string>
    <string name="description_post_image" />
</resources>